<resources>
    <string name="app_name">Gogs</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="loading_text">Loading...</string>

    <string name="login_hint_server">Gogs Server</string>
    <string name="login_hint_protocol">HTTP Protocol</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_login">Login</string>

    <string name="settings_button_signOut">Sign Out</string>

    <string name="userData_server" translatable="false">com.cobble.gogs.app.userData.server</string>
    <string name="userData_protocol" translatable="false">com.cobble.gogs.app.userData.protocol</string>
    <string name="userData_username" translatable="false">com.cobble.gogs.app.userData.username</string>
    <string name="userData_token" translatable="false">com.cobble.gogs.app.userData.token</string>

    <string name="drawer_profile">Profile</string>
    <string name="drawer_repos">Repositories</string>
    <string name="drawer_settings">Settings</string>
</resources>
