<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        tools:context="com.cobble.gogs.app.LoginActivity">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="56dp"
                  android:paddingLeft="24dp"
                  android:paddingRight="24dp"
                  android:id="@+id/activity_login">

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:scaleType="center"
                   android:src="@drawable/gogs_logo" android:layout_gravity="center_horizontal"/>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:gravity="center_vertical">
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/login_hint_protocol"-->
            <!--android:id="@+id/textView"/>-->
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:id="@+id/spinner_protocol"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_server"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textUri"
                          android:hint="@string/login_hint_server"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_username"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textCapWords"
                      android:hint="@string/login_hint_username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/login_hint_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_button_login"/>

    </LinearLayout>
</ScrollView>